Enahnce test plans: part 1